src/snapshots/tptp__tests__cnf_formula.snap
---
source: src/tests.rs
expression: parsed

---
Disjunction(
    Disjunction(
        [
            Atomic(
                Plain(
                    PlainAtomicFormula(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "p",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
)
