src/snapshots/tptp__tests__constant.snap
---
source: src/tests.rs
expression: parsed

---
Constant(
    Functor(
        Lower(
            LowerWord(
                "constant",
            ),
        ),
    ),
)
