src/snapshots/tptp__tests__defined_constant.snap
---
source: src/tests.rs
expression: parsed

---
DefinedConstant(
    DefinedFunctor(
        AtomicDefinedWord(
            DollarWord(
                LowerWord(
                    "defined_constant",
                ),
            ),
        ),
    ),
)
