src/snapshots/tptp__tests__defined_functor.snap
---
source: src/tests.rs
expression: parsed

---
DefinedFunctor(
    AtomicDefinedWord(
        DollarWord(
            LowerWord(
                "defined_functor",
            ),
        ),
    ),
)
