src/snapshots/tptp__tests__defined_term-3.snap
---
source: src/tests.rs
expression: parsed
---
Distinct(
    DistinctObject(
        "distinct object",
    ),
)
