src/snapshots/tptp__tests__defined_term.snap
---
source: src/tests.rs
expression: parsed

---
Number(
    Integer(
        Integer(
            "-123",
        ),
    ),
)
