src/snapshots/tptp__tests__defined_type.snap
---
source: src/tests.rs
assertion_line: 30
expression: parsed

---
DefinedType(
    AtomicDefinedWord(
        DollarWord(
            LowerWord(
                "defined_type",
            ),
        ),
    ),
)
