src/snapshots/tptp__tests__disjunction-3.snap
---
source: src/tests.rs
expression: parsed
---
Disjunction(
    [
        Atomic(
            Plain(
                PlainAtomicFormula(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "p",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        NegatedAtomic(
            Plain(
                PlainAtomicFormula(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "q",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
