src/snapshots/tptp__tests__disjunction.snap
---
source: src/tests.rs
expression: parsed
---
Disjunction(
    [
        Atomic(
            Plain(
                PlainAtomicFormula(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "p",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
