src/snapshots/tptp__tests__dollar_dollar_word.snap
---
source: src/tests.rs
expression: parsed

---
DollarDollarWord(
    LowerWord(
        "dollar",
    ),
)
